--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,15 @@
 	</servlet-mapping>
 	
 	<servlet>
+		<servlet-name>FormServletMapping</servlet-name>
+		<servlet-class>servlet.Form_Servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FormServletMapping</servlet-name>
+		<url-pattern>/Web_project2/form</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
 		<servlet-name>InquiriesServletMapping</servlet-name>
 		<servlet-class>servlet.Inquiries_Servlet</servlet-class>
 	</servlet>
